--- a/config.html
+++ b/config.html
@@ -10,8 +10,34 @@
 <body>
     <button type="button" onclick="location.href='./index.html'">戻る</button>
     <button type="button" onclick="location.href='./measure.html'">距離測定モード         ></button>
+    <hr>
+    期間
+    <select id="rangeSelect">
+        <option value="5">5</option>
+        <option value="10">10</option>
+        <option value="15">15</option>
+        <option value="20">20</option>
+        <option value="25">25</option>
+        <option value="30">30</option>
+        <option value="35">35</option>
+        <option value="40">40</option>
+        <option value="45">45</option>
+        <option value="50">50</option>
+        <option value="55">55</option>
+        <option value="60" selected>60</option>
+        <option value="65">65</option>
+        <option value="70">70</option>
+        <option value="75">75</option>
+        <option value="80">80</option>
+        <option value="95">95</option>
+        <option value="100">100</option>
+        <option value="105">105</option>
+        <option value="110">110</option>
+        <option value="115">115</option>
+        <option value="120">120</option>
+    </select>分
     <br>
-
+    <hr>
     <!-- 起床予定時間の設定した時間前におやすみ通知を送る -->
      おやすみ通知を
      <form id="sleepNotify">
