--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       });
     </script>
     <div id="header">
-      <h1>pwa</h1>
+      <h1>WAKE ME!</h1>
     </div>
     <script>
 
@@ -125,32 +125,7 @@
               <input type="checkbox" id="sunBox" onclick="toggleText('sun')">
               日曜日
               <span id="sunTimeText">--:--</span>
-              <input type="time" id="sunTime" name="time" value="07:00">期間
-              <select id="sunRangeSelect">
-                <option value="5">5</option>
-                <option value="10">10</option>
-                <option value="15">15</option>
-                <option value="20">20</option>
-                <option value="25">25</option>
-                <option value="30">30</option>
-                <option value="35">35</option>
-                <option value="40">40</option>
-                <option value="45">45</option>
-                <option value="50">50</option>
-                <option value="55">55</option>
-                <option value="60" selected>60</option>
-                <option value="65">65</option>
-                <option value="70">70</option>
-                <option value="75">75</option>
-                <option value="80">80</option>
-                <option value="95">95</option>
-                <option value="100">100</option>
-                <option value="105">105</option>
-                <option value="110">110</option>
-                <option value="115">115</option>
-                <option value="120">120</option>
-              </select>
-              <span id="sunRangeText">--</span>分
+              <input type="time" id="sunTime" name="time" value="07:00">
             </span>
           </div>
         </label>
@@ -161,32 +136,7 @@
               <input type="checkbox" id="monBox" onclick="toggleText('mon')">
               月曜日
               <span id="monTimeText"></span>
-              <input type="time" id="monTime" name="time" value="07:00">期間
-              <select id="monRangeSelect">
-                <option value="5">5</option>
-                <option value="10">10</option>
-                <option value="15">15</option>
-                <option value="20">20</option>
-                <option value="25">25</option>
-                <option value="30">30</option>
-                <option value="35">35</option>
-                <option value="40">40</option>
-                <option value="45">45</option>
-                <option value="50">50</option>
-                <option value="55">55</option>
-                <option value="60" selected>60</option>
-                <option value="65">65</option>
-                <option value="70">70</option>
-                <option value="75">75</option>
-                <option value="80">80</option>
-                <option value="95">95</option>
-                <option value="100">100</option>
-                <option value="105">105</option>
-                <option value="110">110</option>
-                <option value="115">115</option>
-                <option value="120">120</option>
-              </select>
-              <span id="monRangeText">--</span>分
+              <input type="time" id="monTime" name="time" value="07:00">
             </span>
           </div>
         </label>
@@ -197,32 +147,7 @@
               <input type="checkbox" id="tueBox" onclick="toggleText('tue')">
               火曜日
               <a id="tueTimeText">--:--</a>
-              <input type="time" id="tueTime" name="time" value="07:00">期間
-              <select id="tueRangeSelect">
-                <option value="5">5</option>
-                <option value="10">10</option>
-                <option value="15">15</option>
-                <option value="20">20</option>
-                <option value="25">25</option>
-                <option value="30">30</option>
-                <option value="35">35</option>
-                <option value="40">40</option>
-                <option value="45">45</option>
-                <option value="50">50</option>
-                <option value="55">55</option>
-                <option value="60" selected>60</option>
-                <option value="65">65</option>
-                <option value="70">70</option>
-                <option value="75">75</option>
-                <option value="80">80</option>
-                <option value="95">95</option>
-                <option value="100">100</option>
-                <option value="105">105</option>
-                <option value="110">110</option>
-                <option value="115">115</option>
-                <option value="120">120</option>
-              </select>
-              <a id="tueRangeText">--</a>分
+              <input type="time" id="tueTime" name="time" value="07:00">
             </span>
           </div>
         </label>
@@ -233,32 +158,7 @@
               <input type="checkbox" id="wedBox" onclick="toggleText('wed')">
               水曜日
               <a id="wedTimeText">--:--</a>
-              <input type="time" id="wedTime" name="time" value="07:00">期間
-              <select id="wedRangeSelect">
-                <option value="5">5</option>
-                <option value="10">10</option>
-                <option value="15">15</option>
-                <option value="20">20</option>
-                <option value="25">25</option>
-                <option value="30">30</option>
-                <option value="35">35</option>
-                <option value="40">40</option>
-                <option value="45">45</option>
-                <option value="50">50</option>
-                <option value="55">55</option>
-                <option value="60" selected>60</option>
-                <option value="65">65</option>
-                <option value="70">70</option>
-                <option value="75">75</option>
-                <option value="80">80</option>
-                <option value="95">95</option>
-                <option value="100">100</option>
-                <option value="105">105</option>
-                <option value="110">110</option>
-                <option value="115">115</option>
-                <option value="120">120</option>
-              </select>
-              <a id="wedRangeText">--</a>分
+              <input type="time" id="wedTime" name="time" value="07:00">
             </span>
           </div>
         </label>
@@ -269,32 +169,7 @@
               <input type="checkbox" id="thuBox" onclick="toggleText('thu')">
               木曜日
               <a id="thuTimeText">--:--</a>
-              <input type="time" id="thuTime" name="time" value="07:00">期間
-              <select id="thuRangeSelect">
-                <option value="5">5</option>
-                <option value="10">10</option>
-                <option value="15">15</option>
-                <option value="20">20</option>
-                <option value="25">25</option>
-                <option value="30">30</option>
-                <option value="35">35</option>
-                <option value="40">40</option>
-                <option value="45">45</option>
-                <option value="50">50</option>
-                <option value="55">55</option>
-                <option value="60" selected>60</option>
-                <option value="65">65</option>
-                <option value="70">70</option>
-                <option value="75">75</option>
-                <option value="80">80</option>
-                <option value="95">95</option>
-                <option value="100">100</option>
-                <option value="105">105</option>
-                <option value="110">110</option>
-                <option value="115">115</option>
-                <option value="120">120</option>
-              </select>
-              <a id="thuRangeText">--</a>分
+              <input type="time" id="thuTime" name="time" value="07:00">
             </span>
           </div>
         </label>
@@ -305,32 +180,7 @@
               <input type="checkbox" id="friBox" onclick="toggleText('fri')">
               金曜日
               <a id="friTimeText">--:--</a>
-              <input type="time" id="friTime" name="time" value="07:00">期間
-              <select id="friRangeSelect">
-                <option value="5">5</option>
-                <option value="10">10</option>
-                <option value="15">15</option>
-                <option value="20">20</option>
-                <option value="25">25</option>
-                <option value="30">30</option>
-                <option value="35">35</option>
-                <option value="40">40</option>
-                <option value="45">45</option>
-                <option value="50">50</option>
-                <option value="55">55</option>
-                <option value="60" selected>60</option>
-                <option value="65">65</option>
-                <option value="70">70</option>
-                <option value="75">75</option>
-                <option value="80">80</option>
-                <option value="95">95</option>
-                <option value="100">100</option>
-                <option value="105">105</option>
-                <option value="110">110</option>
-                <option value="115">115</option>
-                <option value="120">120</option>
-              </select>
-              <a id="friRangeText">--</a>分
+              <input type="time" id="friTime" name="time" value="07:00">
             </span>
           </div>
         </label>
@@ -342,32 +192,7 @@
               <input type="checkbox" id="satBox" onclick="toggleText('sat')">
               土曜日
               <a id="satTimeText">--:--</a>
-              <input type="time" id="satTime" name="time" value="07:00">期間
-              <select id="satRangeSelect">
-                <option value="5">5</option>
-                <option value="10">10</option>
-                <option value="15">15</option>
-                <option value="20">20</option>
-                <option value="25">25</option>
-                <option value="30">30</option>
-                <option value="35">35</option>
-                <option value="40">40</option>
-                <option value="45">45</option>
-                <option value="50">50</option>
-                <option value="55">55</option>
-                <option value="60" selected>60</option>
-                <option value="65">65</option>
-                <option value="70">70</option>
-                <option value="75">75</option>
-                <option value="80">80</option>
-                <option value="95">95</option>
-                <option value="100">100</option>
-                <option value="105">105</option>
-                <option value="110">110</option>
-                <option value="115">115</option>
-                <option value="120">120</option>
-              </select>
-              <a id="satRangeText">--</a>分
+              <input type="time" id="satTime" name="time" value="07:00">
             </span>
           </div>
         </label>
